--- a/web-application/src/app/layout/auth/login/login.component.html
+++ b/web-application/src/app/layout/auth/login/login.component.html
@@ -1,3 +1,28 @@
-<p>
-  login works!
-</p>
+<div class="ui-g ui-fluid">
+  <div class="login-box">
+      <div class="logo">
+          <img src="../../../../assets/images/sale.png" alt="WebApplication">
+      </div>
+  <div class="login-container">
+    <div class="ui-g-12">
+        <div class="ui-g-12">
+            <span class="ui-float-label">
+                <input id="username" type="text" size="30" pInputText> 
+                <label for="username">Username</label>
+            </span>
+        </div>
+        <div class="ui-g-12">
+          <span class="ui-float-label">
+              <input id="password" type="password" size="30" pInputText> 
+              <label for="password">Password</label>
+          </span>
+      </div>   
+    </div>
+    <div class="ui-g-12">
+        <div class="login-submit">
+            <button class="btn btn-login" type="button">Login</button>
+        </div>
+    </div>
+  </div>
+</div>
+</div>
