add animation login

--- a/web-application/src/app/layout/auth/login/login.component.html
+++ b/web-application/src/app/layout/auth/login/login.component.html
@@ -5,6 +5,16 @@
       </div>
   <div class="login-container">
     <div class="ui-g-12">
+        <!-- <div class="ui-g-12">
+            <span>
+                <label>
+                    Web Application
+                </label>
+            </span>
+        </div> -->
+        <div class="ui-g-12 pumpkin">
+            <img src="../../../../assets/images/pumpkin.png" alt="pumpkin">
+            </div>
         <div class="ui-g-12">
             <span class="ui-float-label">
                 <input id="username" type="text" size="30" pInputText> 
