--- a/web-application/src/app/layout/auth/login/login.component.scss
+++ b/web-application/src/app/layout/auth/login/login.component.scss
@@ -31,8 +31,8 @@
 
 .login-container {
     width: 300px;
-    height: 400px;
-    border: 1px solid grey;
+    height: 350px;
+    border: 1px solid $input-color;
     border-radius: 5px;
 }
 
@@ -43,6 +43,9 @@ label {
 .btn-login {
     width: 100%;
     cursor: pointer;
+    background-color: $input-color;
+    color: white;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 .logo img {
@@ -74,4 +77,52 @@ transform: translate(297px, 73px);
         transform: rotateZ(0deg);
    }
 }
+
+.logo-name {
+    font-size: 22px;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+   // text-shadow: 2px 2px 5px $input-color;
+   background: none;
+    box-shadow: 5px 10px 10px 5px #888888;
+}
+
+.ui-inputtext {
+    background-image: linear-gradient(to right, white , $input-color);
+    border: none;
+    color: #c33409;
+}
+
+// .login-success {
+//    animation: loginSuccess 1s 1 linear 0s;
+// }
+
+// @keyframes loginSuccess {
+//  0% {
+//     margin: 100px auto 25px;
+//     transform: rotate(270deg); 
+
+//  }
+//  100% {
+//     margin: 0 auto 25px;
+
+//  }
+// }
+
+// .blood {
+//     width: 10px;
+//     height: 10px;
+//     right: 20px;
+//     display: flex;
+//     border-left: 5px solid transparent;
+//     border-right: 5px solid transparent;
+//     border-bottom: 10px solid red;
+//     background-color: $input-color; 
+//     transition: height 2s;
+// }
+// .blood:hover {
+//     border-left: 5px solid transparent;
+//     border-right: 5px solid transparent;
+//     border-bottom: 10px solid red;
+//     height: 100px;
+// }
 
