--- a/web-application/src/app/layout/header/header.component.html
+++ b/web-application/src/app/layout/header/header.component.html
@@ -1,5 +1,7 @@
 <header>
   <div class="header">
-    <app-user-toolbar></app-user-toolbar>
+    <div class="user-toolbar">
+        <app-user-toolbar></app-user-toolbar>
+    </div>
   </div>
 </header>
