--- a/web-application/src/app/layout/header/header.component.scss
+++ b/web-application/src/app/layout/header/header.component.scss
@@ -6,5 +6,11 @@
     z-index: 1000;
     // box-sizing: border-box;
     // display: flex;
-    background: #e6e6e6;
+    background-image: linear-gradient( white ,#f9a186);
+    box-shadow: 0px 1px 3px #333;
+}
+
+.user-toolbar {
+    width: 20%;
+    float: right;
 }
