--- a/web-application/src/app/shared/components/user-toolbar/user-toolbar.component.scss
+++ b/web-application/src/app/shared/components/user-toolbar/user-toolbar.component.scss
@@ -1,3 +1,4 @@
+@import "../../styles/variables.scss";
 .user-logo {
     width: 100%;
 }
@@ -8,4 +9,45 @@
     height: 30px;
 }
 
+:host ::ng-deep .ui-dropdown label.ui-dropdown-label{
+  color:$input-color;
+  font-weight: bold;
+  background-image: linear-gradient(to right, white , $input-color);
+}
 
+:host ::ng-deep .ui-dropdown .ui-dropdown-trigger {
+  border: none;
+  color: grey;
+  background-image: linear-gradient(to left, white ,  $input-color);
+}
+:host ::ng-deep .ui-dropdown-items {
+  background-image: linear-gradient(to right, white , $input-color);
+}
+
+:host ::ng-deep .ui-dropdown-panel .ui-dropdown-items .ui-dropdown-item.ui-state-highlight {
+  color:$input-color;
+  font-weight: bold;
+  background-image: linear-gradient(to right, white , #00b300);
+}
+
+:host ::ng-deep .ui-dropdown-panel .ui-dropdown-items .ui-dropdown-item {
+  color:$input-color;
+  font-weight: bold;
+}
+
+:host ::ng-deep .ui-dropdown:not(.ui-state-disabled):hover {
+  border: none; 
+}
+:host ::ng-deep .ui-dropdown {
+  border: none; 
+  box-shadow: 0px 1px 3px #333;
+}
+
+:host ::ng-deep .ui-dropdown-panel{
+  border: none; 
+  box-shadow: 0px 1px 3px #333;
+}
+:host ::ng-deep .ui-dropdown-panel .ui-dropdown-items .ui-dropdown-item:not(.ui-state-highlight):not(.ui-state-disabled):hover{
+  color: $input-color;
+  background-image: linear-gradient(to left, white , #00b300);
+}
