--- a/web-application/src/app/layout/header/header.component.html
+++ b/web-application/src/app/layout/header/header.component.html
@@ -3,5 +3,11 @@
     <div class="user-toolbar">
         <app-user-toolbar></app-user-toolbar>
     </div>
+    <div class="user-toolbar">
+        <app-user-toolbar></app-user-toolbar>
+    </div>
+    <div class="user-toolbar">
+        <app-user-toolbar></app-user-toolbar>
+    </div>
   </div>
 </header>
