--- a/web-application/src/app/layout/main/main.component.html
+++ b/web-application/src/app/layout/main/main.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
-<section>
+<section class="main-wrapper">
     <app-sidebar></app-sidebar>
     <app-content></app-content>
 </section>
-
-
