--- a/web-application/src/app/layout/header/header.component.scss
+++ b/web-application/src/app/layout/header/header.component.scss
@@ -1,11 +1,10 @@
 @import "../../shared/styles/variables.scss";
 
 .header {
-
     height: $header-height;
     z-index: 1000;
-    // box-sizing: border-box;
-    // display: flex;
+    box-sizing: border-box;
+    display: flex;
     background-image: linear-gradient( white ,#f9a186);
     box-shadow: 0px 1px 3px #333;
 }
