--- a/web-application/src/app/layout/header/header.component.html
+++ b/web-application/src/app/layout/header/header.component.html
@@ -1,13 +1,15 @@
 <header>
-  <div class="header">
-    <div class="user-toolbar">
-        <app-user-toolbar></app-user-toolbar>
+    <div class="header">
+        <div class="logo">
+           <img src="../../../assets/images/logo_placeholder.png" alt="logo">
+        </div>
+        <div class="header-toolbar">
+            <!-- <div class="language-toolbar">
+                <app-user-toolbar></app-user-toolbar>
+            </div> -->
+            <div class="user-toolbar">
+                <app-user-toolbar></app-user-toolbar>
+            </div>
+        </div>
     </div>
-    <div class="user-toolbar">
-        <app-user-toolbar></app-user-toolbar>
-    </div>
-    <div class="user-toolbar">
-        <app-user-toolbar></app-user-toolbar>
-    </div>
-  </div>
 </header>
