--- a/web-application/src/app/layout/header/header.component.scss
+++ b/web-application/src/app/layout/header/header.component.scss
@@ -7,9 +7,41 @@
     display: flex;
     background-image: linear-gradient( white ,#f9a186);
     box-shadow: 0px 1px 3px #333;
+    padding: 0px;
 }
 
+.logo {
+    flex: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: inherit;
+}
+
+.logo img {
+    height: inherit;
+    flex-basis: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.header-toolbar {
+    flex: 80%;
+    display: flex;
+    height: inherit;
+}
+
+// .language-toolbar {
+//     flex: 60%;
+//     display: flex;
+//     justify-content: flex-end;
+//     height: inherit;
+// }
+
 .user-toolbar {
-    width: 20%;
-    float: right;
+    flex: 1 1 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: inherit;
 }
