--- a/web-application/src/app/shared/components/user-toolbar/user-toolbar.component.html
+++ b/web-application/src/app/shared/components/user-toolbar/user-toolbar.component.html
@@ -1,12 +1,8 @@
-<div class="ui-g ui-fluid">
-    <div class="ui-g-12">
-        <div class="ui-g-6">
-            <div class="user-logo">
-                <img src="../../../../assets/images/user.png">
-            </div>
-        </div>
-        <div class="ui-g-6">
-            <p-dropdown [options]="profileOptions" placeholder="User" optionLabel="name" [showClear]="true"></p-dropdown>
-        </div>
+<div class="d-flex justify-content-end align-items-center">
+    <div class="user-logo">
+        <img src="../../../../assets/images/user.png">
+    </div>
+    <div class="user-profile">
+        <p-dropdown [options]="profileOptions" placeholder="User" optionLabel="name" [showClear]="true"></p-dropdown>
     </div>
 </div>
