add admin and custon sidebar

--- a/web-application/src/app/layout/sidebar/sidebar.component.html
+++ b/web-application/src/app/layout/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<div class="ui-g ui-fluid">
-  <div class="ui-g-12 sidebar">
-
-  </div>
+<div class="sidebar">
+  <a routerLink="/admin" routerLinkActive="active">
+    <span class="menu-item">Admin</span>
+  </a>
 </div>
