--- a/web-application/src/app/layout/main/main.component.html
+++ b/web-application/src/app/layout/main/main.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <section class="main-wrapper">
-    <app-sidebar></app-sidebar>
+    <app-sidebar (onMenuSelect)="handleMenuSelect($event)" [class.sidebar]="showMenu | async"></app-sidebar>
     <app-content></app-content>
 </section>
