--- a/web-application/src/app/layout/main/main.component.scss
+++ b/web-application/src/app/layout/main/main.component.scss
@@ -10,15 +10,21 @@
 }
 
 app-sidebar {
-    flex: 0 1 15rem;
+    flex: 0 1;
     display: flex;
     height: inherit;
+    transition: flex 1s;
+  }
+  .sidebar {
+    flex: 0 1 15rem;
+    box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.9);
   }
 
   app-content {
     height: inherit;
     flex: 1;
-    z-index: 1;
-    box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.2);
+    z-index: 1;  
     overflow: auto;
   }
+
+ 
