--- a/web-application/src/app/layout/sidebar/sidebar.component.scss
+++ b/web-application/src/app/layout/sidebar/sidebar.component.scss
@@ -1,3 +1,4 @@
+@import "../../shared/styles/variables.scss";
 .sidebar {
     height: inherit;
     flex: 1;
@@ -5,32 +6,54 @@
     flex-wrap: wrap;
     flex-flow: row;
     align-items: flex-start;
-    background-image: linear-gradient( #f9a186, white);
+   // background-image: linear-gradient( #f9a186, white);
 }
 
 .sidebar a {
     flex: 1;
     display: flex;
-    background-image: linear-gradient( white, green);
+   // background-image: linear-gradient( white, green);
 }
 
-.menu-item {
-  flex: 80%;
-  display: flex;
-  justify-content: flex-end;
-  font-size: 20px;
-  color: #fff;
-  font-family: 'Times New Roman', Times, serif;
-  outline: none;
-  border: 1px solid grey; 
-  box-shadow: 5px 5px 20px grey; 
-}
-
-
-.menu-item::after {
-    content: '\003e';
-    flex: 20%;
+.menu-logo {
+    flex: 1;
     display: flex;
+    height: 40px;
+    background: #31AF91;
+   // background-image: linear-gradient(to left, white , #31AF91);
+    justify-content: flex-start; 
+    box-shadow: -1px 1px 2px #31AF91;
+}
+.menu-show {
     justify-content: flex-end;
-    padding-right: 15px;
+}
+
+.menu-hide {
+    justify-content: flex-start;
+}
+// .menu-item {
+//   flex: 80%;
+//   display: flex;
+//   justify-content: flex-end;
+//   font-size: 20px;
+//   color: #fff;
+//   font-family: 'Times New Roman', Times, serif;
+//   outline: none;
+//   border: 1px solid grey; 
+//   box-shadow: 5px 5px 20px grey; 
+// }
+
+
+// .menu-item::after {
+//     content: '\003e';
+//     flex: 20%;
+//     display: flex;
+//     justify-content: flex-end;
+//     padding-right: 15px;
+// }
+
+.menu-icon img {
+    width: 40px;
+    height: 40px;
+    background: none;
 }
