fix flex icon for side bar

--- a/web-application/src/app/layout/sidebar/sidebar.component.html
+++ b/web-application/src/app/layout/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
   </a> -->
  
       <a class="menu-icon">
-        <div class="menu-logo" [ngClass]="{'menu-show': clicked, 'menu-hide': !clicked}">
+        <div class="menu-logo">
             <img src="../../../assets/images/menu.png" (click)="handleMenu()">
         </div>
       </a>
