--- a/web-application/src/app/layout/sidebar/sidebar.component.scss
+++ b/web-application/src/app/layout/sidebar/sidebar.component.scss
@@ -5,15 +5,12 @@
     display: flex;
     flex-wrap: wrap;
     flex-flow: row;
-   // align-items: flex-start;
-   // background-image: linear-gradient( #f9a186, white);
 }
 
 .sidebar a {
     flex: 1;
-    display: flex;
-   // background-image: linear-gradient( white, green);
 }
+.menu {}
 
 .menu-logo {
     flex: 1;
@@ -21,35 +18,34 @@
     height: 40px;
     background: #31AF91;
     cursor: pointer;
-   // background-image: linear-gradient(to left, white , #31AF91);
     justify-content: flex-end; 
-    box-shadow: -1px 1px 2px #31AF91;
+    // border-bottom: 1px solid grey;
+    // border-style: inset;
+    // box-shadow: -1px 1px 2px #31AF91;
+}
+
+.menu-items {
+  
+}
+.menu-item {
+    flex: 1;
+    display: flex;
+    background: #31AF91;
+    justify-content: center;
+    // border-bottom: 1px solid $input-color;
+    // box-shadow: 0px 3px 2px #31AF91;
+    cursor: pointer;
+}
+
+.menu-item span {
+    font-size: 18px;
+    font-family:  "Trebuchet MS", Helvetica, sans-serif;
+    color: #fff;
 }
 
 
 
-// .menu-item {
-//   flex: 80%;
-//   display: flex;
-//   justify-content: flex-end;
-//   font-size: 20px;
-//   color: #fff;
-//   font-family: 'Times New Roman', Times, serif;
-//   outline: none;
-//   border: 1px solid grey; 
-//   box-shadow: 5px 5px 20px grey; 
-// }
-
-
-// .menu-item::after {
-//     content: '\003e';
-//     flex: 20%;
-//     display: flex;
-//     justify-content: flex-end;
-//     padding-right: 15px;
-// }
-
-.menu-icon img {
+.menu img {
     width: 40px;
     height: 40px;
     background: none;
