--- a/web-application/src/app/layout/sidebar/sidebar.component.scss
+++ b/web-application/src/app/layout/sidebar/sidebar.component.scss
@@ -10,7 +10,6 @@
 .sidebar a {
     flex: 1;
 }
-.menu {}
 
 .menu-logo {
     flex: 1;
@@ -24,9 +23,6 @@
     // box-shadow: -1px 1px 2px #31AF91;
 }
 
-.menu-items {
-  
-}
 .menu-item {
     flex: 1;
     display: flex;
@@ -36,7 +32,10 @@
     // box-shadow: 0px 3px 2px #31AF91;
     cursor: pointer;
 }
-
+.subMenu-items a {
+    flex: 1 ;
+    
+}
 .menu-item span {
     font-size: 18px;
     font-family:  "Trebuchet MS", Helvetica, sans-serif;
