--- a/web-application/src/app/layout/main/main.component.scss
+++ b/web-application/src/app/layout/main/main.component.scss
@@ -2,23 +2,22 @@
 .main-wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
     align-items: stretch;
     align-content: stretch;
-    flex: 1;
     height: calc(100vh - 80px);
 }
 
 app-sidebar {
     flex: 0 1;
     display: flex;
+    width: 60px;
     height: inherit;
     transition: flex 0.5s;
   }
   .sidebar {
-    flex: 0 1 15rem;
+    flex: 0 1 30rem;
+    display: flex;
     box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.9);
-    justify-content: flex-end;
   }
 
   app-content {
