add home component and refactor header, update package.json

--- a/web-application/src/app/layout/header/header.component.html
+++ b/web-application/src/app/layout/header/header.component.html
@@ -1,15 +1,18 @@
 <header>
     <div class="header">
-        <div class="logo">
+        <!-- <div class="logo">
            <img src="../../../assets/images/logo_placeholder.png" alt="logo">
+        </div> -->
+        <div class="header-container">
+            <a class="item">Get Started</a>
         </div>
-        <div class="header-toolbar">
-            <!-- <div class="language-toolbar">
+        <!-- <div class="header-toolbar">
+            <div class="language-toolbar">
                 <app-user-toolbar></app-user-toolbar>
-            </div> -->
+            </div>
             <div class="user-toolbar">
                 <app-user-toolbar></app-user-toolbar>
             </div>
-        </div>
+        </div> -->
     </div>
 </header>
