--- a/web-application/src/app/layout/header/header.component.scss
+++ b/web-application/src/app/layout/header/header.component.scss
@@ -5,9 +5,38 @@
     z-index: 1000;
     box-sizing: border-box;
     display: flex;
-    background-image: linear-gradient( white ,#f9a186);
+    background-color: #f5f6f7;
+   // background-image: linear-gradient( white ,#f9a186);
     box-shadow: 0px 1px 3px #333;
     padding: 0px;
+}
+
+.header-container {
+    max-width: 1230px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.item {
+    display: inline-block!important;
+    padding: 0 25px;
+    color: #4d4f52;
+    background: #75dbff;
+    border: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    vertical-align: middle;
+    text-transform: uppercase;
+    font: 600 15px/40px Metric,Arial,Helvetica,sans-serif;
+}
+
+.item:focus, .item:hover {
+    cursor: pointer;
+    color: #000;
+    background: #32caff;
 }
 
 .logo {
