add flex and style

--- a/web-application/src/app/layout/header/header.component.html
+++ b/web-application/src/app/layout/header/header.component.html
@@ -1,18 +1,26 @@
 <header>
     <div class="header">
-        <!-- <div class="logo">
-           <img src="../../../assets/images/logo_placeholder.png" alt="logo">
-        </div> -->
         <div class="header-container">
-            <a class="item">Get Started</a>
+            <nav>
+                <ul>
+                    <li><a class="item" href="">Home</a></li>
+                    <li><a class="item" href="">Examples</a></li>
+                    <li><a class="item" href="">Themes</a></li>
+                    <li><a class="item" href="">Pricing</a></li>
+                    <li><a class="item-button" href="">Get Started</a></li>
+                </ul>
+            </nav>
         </div>
-        <!-- <div class="header-toolbar">
-            <div class="language-toolbar">
-                <app-user-toolbar></app-user-toolbar>
-            </div>
-            <div class="user-toolbar">
-                <app-user-toolbar></app-user-toolbar>
-            </div>
-        </div> -->
     </div>
 </header>
+<!-- <div class="logo">
+           <img src="../../../assets/images/logo_placeholder.png" alt="logo">
+        </div> -->
+<!-- <div class="header-toolbar">
+    <div class="language-toolbar">
+        <app-user-toolbar></app-user-toolbar>
+    </div>
+    <div class="user-toolbar">
+        <app-user-toolbar></app-user-toolbar>
+    </div>
+</div> -->
