add background img

--- a/web-application/src/app/layout/home/home.component.html
+++ b/web-application/src/app/layout/home/home.component.html
@@ -1,1 +1,6 @@
 <app-header></app-header>
+<section class="home-wrapper">
+    <div class="image-wrapper">
+            <img src="../../../assets/images/backimg2.jpg"  height="500" >
+    </div>
+</section>
