--- a/web-application/src/app/layout/header/header.component.scss
+++ b/web-application/src/app/layout/header/header.component.scss
@@ -25,24 +25,31 @@ nav ul{
 }
 nav a{
     text-decoration: none;
-    display: block;
-    padding: 8px;
+    display: block; 
 }
 
 @media only screen and (min-width: 1230px) {
     nav ul{
         display: flex;
-        justify-content: space-between;
+        flex: 3;
     }
 
-    nav li {
-        //flex: 1 1 0;
+    nav ul li {
+        flex: 1 1 0;
     }
+
+    nav{
+        display: flex;
+    }
+}
+
+nav ul.social {
+    flex:1;
 }
 
 .item {
     display: inline-block!important;
-    padding: 0 25px;
+    padding: 8px;
     color: #4d4f52;
     text-transform: uppercase;
     font: 600 15px/40px Metric,Arial,Helvetica,sans-serif;
@@ -58,9 +65,17 @@ nav a{
    
 }
 
+.social-item {
+    width: 144px;
+    height: 40px;
+}
+
 .item-button {
     display: inline-block!important;
-    padding: 0 25px;
+    margin-top: 10px;
+    padding: 0;
+    padding-left: 20px;
+    padding-right: 20px;
     color: #4d4f52;
     background: #75dbff;
     border: none;
