add profile and contact icons

--- a/web-application/src/app/layout/header/header.component.html
+++ b/web-application/src/app/layout/header/header.component.html
@@ -9,7 +9,9 @@
                     <li><a class="item" href="">Pricing</a></li>
                 </ul>
                 <ul class="social">
-                    <li class="social-item"><a class="item-button" href="">Get Started</a></li>
+                    <li class="list-item-icon"><a  class="item" href="" title="Your Account"><i class="pi pi-user"></i></a></li>
+                    <li class="list-item-icon"><a  class="item" href="" title="Contact Us"><i class="pi pi-envelope"></i></a></li>
+                    <li class="list-item-button"><a class="item-button" href="">Get Started</a></li>
                 </ul>
             </nav>
         </div>
