--- a/web-application/src/app/layout/header/header.component.html
+++ b/web-application/src/app/layout/header/header.component.html
@@ -1,6 +1,9 @@
 <header>
     <div class="header">
         <div class="header-container">
+            <!-- <div class="logo">
+                <img src="../../../assets/images/logo.jpg">
+            </div> -->
             <nav>
                 <ul>
                     <li><a class="item" href="">Home</a></li>
