--- a/web-application/src/app/layout/header/header.component.scss
+++ b/web-application/src/app/layout/header/header.component.scss
@@ -9,6 +9,7 @@
 }
 
 .header-container {
+    display: flex;
     max-width: 1230px;
     margin-left: auto;
     margin-right: auto;
@@ -39,6 +40,7 @@ nav a{
     }
 
     nav{
+        flex: 1;
         display: flex;
     }
 }
@@ -103,16 +105,14 @@ nav ul.social {
 
 
 .logo {
-    flex: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: inherit;
+    height: 55px;
 }
 
 .logo img {
-    height: inherit;
-    flex-basis: 100px;
+    height: 55px;
     display: flex;
     justify-content: center;
 }
