add general content box

--- a/web-application/src/app/layout/home/home.component.html
+++ b/web-application/src/app/layout/home/home.component.html
@@ -1,6 +1,12 @@
 <app-header></app-header>
 <section class="home-wrapper">
     <div class="image-wrapper">
-            <img src="../../../assets/images/backimg2.jpg"  height="500" >
+        <img src="../../../assets/images/backimg2.jpg" height="500">
+    </div>
+    <div class="general-content-box">
+            <h1>This is HEADER</h1>
+            <h2>This is subHeader</h2>
+        <div class="productBox">
+        </div>
     </div>
 </section>
