--- a/web-application/src/app/layout/home/home.component.scss
+++ b/web-application/src/app/layout/home/home.component.scss
@@ -42,9 +42,9 @@ h2 {
 }
 .product {
     flex: 1;
-    height: 400px;
     background-color: white;
     margin: 10px;
+    padding-bottom: 75px; 
     border-radius: 2px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.18);
 }
