change from company to presentation

--- a/web-application/src/app/layout/home/product-box/product-box.component.html
+++ b/web-application/src/app/layout/home/product-box/product-box.component.html
@@ -1,15 +1,19 @@
 <div class="product">
     <h5 *ngIf="productType === 'portfolio'">Designed for users</h5>
-    <h5 *ngIf="productType === 'company'">Designed for companies</h5>
+    <h5 *ngIf="productType === 'presentation'">Designed for companies</h5>
     <h2>{{productType | uppercase}}</h2>
     <p *ngIf="productType === 'portfolio'">
         Easy to use.Professional themes. A hassle-free online portfolio. No HTML necessary. Chock-full of features.
         Proven aphrodisiac</p>
-    <p *ngIf="productType === 'company'">
-        Easy to use. Professional themes. A hassle-free online portfolio. No HTML necessary. Chock-full of features.
+    <p *ngIf="productType === 'presentation'">
+        Easy to use. Professional themes. A hassle-free online presentation. No HTML necessary. Chock-full of features.
         Proven aphrodisiac</p>
-    <div class="product-command-buttons">
+    <div class="product-command-buttons" *ngIf="productType === 'portfolio'">
         <a href="" class="btn btn-primary btn-block moreInfo_btn">More About Portfolio</a>
         <a href="" class="btn btn-primary  btn-block getStarted_btn">Create Own Portfolio</a>
+    </div>
+    <div class="product-command-buttons" *ngIf="productType === 'presentation'">
+        <a href="" class="btn btn-primary btn-block moreInfo_btn">More About Presentation</a>
+        <a href="" class="btn btn-primary  btn-block getStarted_btn">Create Own Presentation</a>
     </div>
 </div>
